intercom-attributes/tests/data/ui/span-comclass-no-com-interface.rs.stderr
error[E0277]: the trait bound `(dyn NotComInterface + 'static): ComInterface` is not satisfied
 --> span-comclass-no-com-interface.rs:8:1
  |
8 | #[com_class(NotComInterface)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ComInterface` is not implemented for `(dyn NotComInterface + 'static)`
  |
  = help: the following other types implement trait `ComInterface`:
            (dyn IAllocator + 'static)
            (dyn IClassFactory + 'static)
            (dyn IErrorInfo + 'static)
            (dyn IErrorStore + 'static)
            (dyn IIntercomCoClass + 'static)
            (dyn IIntercomInterface + 'static)
            (dyn IIntercomInterfaceVariant + 'static)
            (dyn IIntercomMethod + 'static)
          and 5 others
  = note: this error originates in the attribute macro `com_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
